# Trifecta-SDK

./: CMakeLists.txt  FS_Trifecta.h
.github/workflows/: build_esp-idf.yml
android/: FS_Trifecta_Interfaces.c  FS_Trifecta_Interfaces_Networked.c
cmake/: platform_espidf.cmake  platform_stm32.cmake
common/: FS_Trifecta.c  FS_Trifecta_Device_Utils.c  FS_Trifecta_J1939.c  FS_Trifecta_Replay.c  FS_Trifecta_Saver.c
csharp/: Trifecta_API.cs  Trifecta_DefinitionsCommunicationV2.cs  Trifecta_DefinitionsDeviceV2.cs  Trifecta_DefinitionsPacketV2.cs
documentation/: TODO.txt
esp-idf/: FS_Trifecta_Interfaces.c  FS_Trifecta_Interfaces_Networked.c  FS_Trifecta_Interfaces_Serial.c
include/: FS_Trifecta_Defs.h  FS_Trifecta_Defs_Communication.h  FS_Trifecta_Defs_I2C.h  FS_Trifecta_Defs_J1939.h  FS_Trifecta_Defs_Mutex.h  FS_Trifecta_Defs_Packets.h  FS_Trifecta_Defs_Platform_Types.h  FS_Trifecta_Interfaces.h  FS_Trifecta_J1939.h  FS_Trifecta_Replay.h  FS_Trifecta_Saver.h
linux/: FS_Trifecta_Interfaces.c  FS_Trifecta_Interfaces_Networked.c
stm32/: FS_Trifecta_Interfaces.c  FS_Trifecta_Interfaces_Networked.c  FS_Trifecta_Interfaces_Serial.c
stm32/F4/: FS_Trifecta_Interfaces_F4.c
tests/: CMakeLists.txt  test_parse_base64.c  test_parse_binary.c  test_parse_commands.c  test_replay.c  test_replay_long_file.c  test_save.c
tests/test_resources/: NEW_FORMAT.csv
windows/: FS_Trifecta_Interfaces.c  FS_Trifecta_Interfaces_Networked.c
